--- a/greeter/greeter-core/pom.xml
+++ b/greeter/greeter-core/pom.xml
@@ -8,4 +8,10 @@
   </parent>
   <artifactId>greeter-core</artifactId>
   <name>Greeter Core</name>
+  <dependencies>
+   <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context</artifactId>
+   </dependency>
+  </dependencies>
 </project>
