--- a/greeter/greeter-app-java/pom.xml
+++ b/greeter/greeter-app-java/pom.xml
@@ -45,5 +45,9 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
     </dependency>
+    <dependency>
+     <groupId>org.slf4j</groupId>
+     <artifactId>slf4j-api</artifactId>
+    </dependency>
   </dependencies>
 </project>
