Spring Web MVC D1

--- a/organizer/organizer-core/pom.xml
+++ b/organizer/organizer-core/pom.xml
@@ -5,8 +5,8 @@
   <parent>
     <groupId>com.example.spring</groupId>
     <artifactId>organizer</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <relativePath>..</relativePath>
+    <version>[0,999)</version>
+    <relativePath>../</relativePath>
   </parent>
   
   <dependencies>
@@ -33,6 +33,24 @@
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.2.4.Final</version>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.el</groupId>
+          <artifactId>el-api</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>1.1.0.Final</version>
     </dependency>
     
     <dependency>
