--- a/greeter/greeter-app-java/pom.xml
+++ b/greeter/greeter-app-java/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.example.spring</groupId>
     <artifactId>greeter</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>[0,999)</version>
     <relativePath>..</relativePath>
   </parent>
   
