--- a/organizer/pom.xml
+++ b/organizer/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>organizer</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Organizer</name>
   
@@ -14,5 +14,7 @@
 
   <modules>
     <module>organizer-core</module>
+    <module>organizer-cli</module>
+    <module>organizer-web</module>
   </modules>
 </project>
