--- a/organizer/organizer-cli/pom.xml
+++ b/organizer/organizer-cli/pom.xml
@@ -22,6 +22,11 @@
     </dependency>
     
     <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+    </dependency>
+    
+    <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-library</artifactId>
     </dependency>
